--- a/tools.html
+++ b/tools.html
@@ -69,7 +69,7 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
  <li><a href="http://bce.bioetanol.cnpem.br/ctbeblast/">BLAST server @ CTBE </a></li>
  <li><a href="http://bce.bioetanol.cnpem.br:8080/apollo/annotator/index">Web apollo @ CTBE</a> (username required).</li>
  <li><a href="https://github.com/diriano/ploidyNGS">ploidyNGS:</a> Model-free exploration of ploidy levels using NGS data alone.</li>
- <li><a href="https://bitbucket.org/diriano/bce_ctbe">General purpose software reposity:</a> Collection of scrips used by team members and collaborators.</li>
+ <li><a href="https://bitbucket.org/diriano/bces_scripts">General purpose software reposity:</a> Collection of scrips used by team members and collaborators.</li>
  <li>Plant Transcription Factor Database (<a href="http://plntfdb.bioetanol.cnpem.br/">Brazil</a>, <a href="http://plntfdb.bio.uni-potsdam.de/">Germany</a>), the rules for the identification and classification of TFs and oTRs are available via <a href="https://bitbucket.org/diriano/plntfdb">bitbucket</a></li>
  <li><a href="http://galaxy.cnpem.br/">Our Galaxy server @ CTBE </a> (username required)</li>
 </ul>
