--- a/dmrpPublications_bib.html
+++ b/dmrpPublications_bib.html
@@ -960,7 +960,6 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
   pages = {28},
   month = feb,
   issn = {1474-760X},
-  __markedentry = {[diriano:]},
   abstract = {The fungal genus Aspergillus is of critical importance to humankind. Species include those with industrial applications, important pathogens of humans, animals and crops, a source of potent carcinogenic contaminants of food, and an important genetic model. The genome sequences of eight aspergilli have already been explored to investigate aspects of fungal biology, raising questions about evolution and specialization within this genus. We have generated genome sequences for ten novel, highly diverse Aspergillus species and compared these in detail to sister and more distant genera. Comparative studies of key aspects of fungal biology, including primary and secondary metabolism, stress response, biomass degradation, and signal transduction, revealed both conservation and diversity among the species. Observed genomic differences were validated with experimental studies. This revealed several highlights, such as the potential for sex in asexual species, organic acid production genes being a key feature of black aspergilli, alternative approaches for degrading plant biomass, and indications for the genetic basis of stress response. A genome-wide phylogenetic analysis demonstrated in detail the relationship of the newly genome sequenced species with other aspergilli. Many aspects of biological differences between fungal species cannot be explained by current knowledge obtained from genome sequences. The comparative genomics and experimental study, presented here, allows for the first time a genus-wide view of the biological diversity of the aspergilli and in many, but not all, cases linked genome differences to phenotype. Insights gained could be exploited for biotechnological and medical applications of fungi.},
   country = {England},
   created = {2017-02-15},
@@ -988,7 +987,6 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
   volume = {19},
   month = apr,
   issn = {1462-5822},
-  __markedentry = {[diriano:6]},
   abstract = {Invasive aspergillosis is predominantly caused by Aspergillus fumigatus, and adaptations to stresses experienced within the human host are a prerequisite for the survival and virulence strategies of the pathogen. The central signal transduction pathway operating during hyperosmotic stress is the high osmolarity glycerol mitogen-activated protein kinase cascade. A. fumigatus MpkC and SakA, orthologues of the Saccharomyces cerevisiae Hog1p, constitute the primary regulator of the hyperosmotic stress response. We compared A. fumigatus wild-type transcriptional response to osmotic stress with the ΔmpkC, ΔsakA, and ΔmpkC ΔsakA strains. Our results strongly indicate that MpkC and SakA have independent and collaborative functions during the transcriptional response to transient osmotic stress. We have identified and characterized null mutants for four A. fumigatus basic leucine zipper proteins transcription factors. The atfA and atfB have comparable expression levels with the wild-type in ΔmpkC but are repressed in ΔsakA and ΔmpkC ΔsakA post-osmotic stress. The atfC and atfD have reduced expression levels in all mutants post-osmotic stress. The atfA-D null mutants displayed several phenotypes related to osmotic, oxidative, and cell wall stresses. The ΔatfA and ΔatfB were shown to be avirulent and to have attenuated virulence, respectively, in both Galleria mellonella and a neutropenic murine model of invasive pulmonary aspergillosis.},
   country = {England},
   created = {2016-10-05},
@@ -1001,6 +999,75 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
   pubmodel = {Print-Electronic},
   pubstatus = {ppublish},
   revised = {2017-03-08}
+}
+</pre>
+
+<a name="Borin2017"></a><pre>
+@article{<a href="publications.html#Borin2017">Borin2017</a>,
+  author = {Borin, Gustavo Pagotto and Sanchez, Camila Cristina and de Santana, Eliane Silva and Zanini, Guilherme Keppe and Dos Santos, Renato Augusto Corrêa and de Oliveira Pontes, Angélica and de Souza, Aline Tieppo and Dal'Mas, Roberta Maria Menegaldo Tavares Soares and Riaño-Pachón, Diego Mauricio and Goldman, Gustavo Henrique and Oliveira, Juliana Velasco de Castro},
+  title = {Comparative transcriptome analysis reveals different strategies for degradation of steam-exploded sugarcane bagasse by Aspergillus niger and Trichoderma reesei.},
+  journal = {BMC genomics},
+  year = {2017},
+  volume = {18},
+  pages = {501},
+  month = jun,
+  issn = {1471-2164},
+  abstract = {Second generation (2G) ethanol is produced by breaking down lignocellulosic biomass into fermentable sugars. In Brazil, sugarcane bagasse has been proposed as the lignocellulosic residue for this biofuel production. The enzymatic cocktails for the degradation of biomass-derived polysaccharides are mostly produced by fungi, such as Aspergillus niger and Trichoderma reesei. However, it is not yet fully understood how these microorganisms degrade plant biomass. In order to identify transcriptomic changes during steam-exploded bagasse (SEB) breakdown, we conducted a RNA-seq comparative transcriptome profiling of both fungi growing on SEB as carbon source. Particular attention was focused on CAZymes, sugar transporters, transcription factors (TFs) and other proteins related to lignocellulose degradation. Although genes coding for the main enzymes involved in biomass deconstruction were expressed by both fungal strains since the beginning of the growth in SEB, significant differences were found in their expression profiles. The expression of these enzymes is mainly regulated at the transcription level, and A. niger and T. reesei also showed differences in TFs content and in their expression. Several sugar transporters that were induced in both fungal strains could be new players on biomass degradation besides their role in sugar uptake. Interestingly, our findings revealed that in both strains several genes that code for proteins of unknown function and pro-oxidant, antioxidant, and detoxification enzymes were induced during growth in SEB as carbon source, but their specific roles on lignocellulose degradation remain to be elucidated. This is the first report of a time-course experiment monitoring the degradation of pretreated bagasse by two important fungi using the RNA-seq technology. It was possible to identify a set of genes that might be applied in several biotechnology fields. The data suggest that these two microorganisms employ different strategies for biomass breakdown. This knowledge can be exploited for the rational design of enzymatic cocktails and 2G ethanol production improvement.},
+  country = {England},
+  created = {2017-07-01},
+  doi = {10.1186/s12864-017-3857-5},
+  issn-linking = {1471-2164},
+  issue = {1},
+  keywords = {Aspergillus niger; CAZymes; RNA-seq; Sugarcane bagasse; Transcription factors; Transporters; Trichoderma reesei},
+  nlm-id = {100965258},
+  owner = {NLM},
+  pii = {10.1186/s12864-017-3857-5},
+  pmc = {PMC5493111},
+  pmid = {28666414},
+  pubmodel = {Electronic},
+  pubstatus = {epublish},
+  revised = {2017-07-06}
+}
+</pre>
+
+<a name="Mandelli2017"></a><pre>
+@article{<a href="publications.html#Mandelli2017">Mandelli2017</a>,
+  author = {Mandelli, F and Couger, M B and Paixão, D A A and Machado, C B and Carnielli, C M and Aricetti, J A and Polikarpov, I and Prade, R and Caldana, C and Paes Leme, A F and Mercadante, A Z and Riaño-Pachón, D M and Squina, Fabio Marcio},
+  title = {Thermal adaptation strategies of the extremophile bacterium Thermus filiformis based on multi-omics analysis.},
+  journal = {Extremophiles : life under extreme conditions},
+  year = {2017},
+  volume = {21},
+  pages = {775--788},
+  month = jul,
+  issn = {1433-4909},
+  __markedentry = {[diriano:]},
+  abstract = {Thermus filiformis is an aerobic thermophilic bacterium isolated from a hot spring in New Zealand. The experimental study of the mechanisms of thermal adaptation is important to unveil response strategies of the microorganism to stress. In this study, the main pathways involved on T. filiformis thermoadaptation, as well as, thermozymes with potential biotechnological applications were revealed based on omics approaches. The strategy adopted in this study disclosed that pathways related to the carbohydrate metabolism were affected in response to thermoadaptation. High temperatures triggered oxidative stress, leading to repression of genes involved in glycolysis and the tricarboxylic acid cycle. During heat stress, the glucose metabolism occurred predominantly via the pentose phosphate pathway instead of the glycolysis pathway. Other processes, such as protein degradation, stringent response, and duplication of aminoacyl-tRNA synthetases, were also related to T. filiformis thermoadaptation. The heat-shock response influenced the carotenoid profile of T. filiformis, favoring the synthesis of thermozeaxanthins and thermobiszeaxanthins, which are related to membrane stabilization at high temperatures. Furthermore, antioxidant enzymes correlated with free radical scavenging, including superoxide dismutase, catalase and peroxidase, and metabolites, such as oxaloacetate and α-ketoglutarate, were accumulated at 77 °C.},
+  country = {Germany},
+  created = {2017-05-13},
+  doi = {10.1007/s00792-017-0942-2},
+  issn-linking = {1431-0651},
+  issue = {4},
+  keywords = {Metabolomics; Peroxyl radical scavenging activity; Proteomics; Thermozeaxanthins; Transcriptomics},
+  nlm-id = {9706854},
+  owner = {NLM},
+  pii = {10.1007/s00792-017-0942-2},
+  pmid = {28500387},
+  pubmodel = {Print-Electronic},
+  pubstatus = {ppublish},
+  revised = {2017-06-21}
+}
+</pre>
+
+<a name="Riano-Pachon2017"></a><pre>
+@article{<a href="publications.html#Riano-Pachon2017">Riano-Pachon2017</a>,
+  author = {Ria\~no-Pach\'on, DM and Mattiello, L},
+  title = {Draft genome sequencing of the sugarcane hybrid SP80-3280 [version 2; referees: 2 approved]},
+  journal = {F1000Research},
+  year = {2017},
+  volume = {6},
+  number = {861},
+  __markedentry = {[diriano:6]},
+  doi = {10.12688/f1000research.11859.2}
 }
 </pre>
 
