--- a/publications.html
+++ b/publications.html
@@ -87,7 +87,25 @@ F&nbsp;Mandelli, M&nbsp;B Couger, D&nbsp;A&nbsp;A Paixão, C&nbsp;B Machado, C&n
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Borin2017">2</a>]
+[<a name="Nobile2017">2</a>]
+</td>
+<td class="bibtexitem">
+Paula&nbsp;Macedo Nobile, Alexandra Bottcher, Juliana L&nbsp;S Mayer, Michael&nbsp;S Brito,
+  Ivan&nbsp;A Dos&nbsp;Anjos, Marcos Guimarães de&nbsp;Andrade Landell, Renato Vicentini,
+  Silvana Creste, Diego&nbsp;Mauricio Riaño-Pachón, and Paulo Mazzafera.
+ Identification, classification and transcriptional profiles of
+  dirigent domain-containing proteins in sugarcane.
+ <em>Molecular genetics and genomics : MGG</em>, July 2017.
+[&nbsp;<a href="dmrpPublications_bib.html#Nobile2017">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1007/s00438-017-1349-6">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="Borin2017">3</a>]
 </td>
 <td class="bibtexitem">
 Gustavo&nbsp;Pagotto Borin, Camila&nbsp;Cristina Sanchez, Eliane&nbsp;Silva de&nbsp;Santana,
@@ -108,7 +126,7 @@ Gustavo&nbsp;Pagotto Borin, Camila&nbsp;Cristina Sanchez, Eliane&nbsp;Silva de&n
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="DosSantos2017">3</a>]
+[<a name="DosSantos2017">4</a>]
 </td>
 <td class="bibtexitem">
 Renato Augusto&nbsp;Corrêa Dos&nbsp;Santos, Gustavo&nbsp;Henrique Goldman, and Diego&nbsp;Mauricio
@@ -125,7 +143,7 @@ Renato Augusto&nbsp;Corrêa Dos&nbsp;Santos, Gustavo&nbsp;Henrique Goldman, and 
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="PereiraSilva2017">4</a>]
+[<a name="PereiraSilva2017">5</a>]
 </td>
 <td class="bibtexitem">
 Lilian Pereira&nbsp;Silva, Patrícia Alves&nbsp;de Castro, Thaila&nbsp;Fernanda Dos&nbsp;Reis,
@@ -145,7 +163,7 @@ Lilian Pereira&nbsp;Silva, Patrícia Alves&nbsp;de Castro, Thaila&nbsp;Fernanda 
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="DosReis2017">5</a>]
+[<a name="DosReis2017">6</a>]
 </td>
 <td class="bibtexitem">
 Thaila&nbsp;Fernanda Dos&nbsp;Reis, Benjamin&nbsp;M Nitsche, Pollyne Borborema&nbsp;Almeida
@@ -164,7 +182,7 @@ Thaila&nbsp;Fernanda Dos&nbsp;Reis, Benjamin&nbsp;M Nitsche, Pollyne Borborema&n
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Coutoune2017">6</a>]
+[<a name="Coutoune2017">7</a>]
 </td>
 <td class="bibtexitem">
 Natalia Coutouné, Aline Tieppo&nbsp;Nogueira Mulato, Diego&nbsp;Mauricio Riaño-Pachón,
@@ -181,7 +199,7 @@ Natalia Coutouné, Aline Tieppo&nbsp;Nogueira Mulato, Diego&nbsp;Mauricio Riaño
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Vries2017">7</a>]
+[<a name="Vries2017">8</a>]
 </td>
 <td class="bibtexitem">
 Ronald&nbsp;P de&nbsp;Vries, Robert Riley, Ad&nbsp;Wiebenga, Guillermo Aguilar-Osorio, Sotiris
@@ -224,7 +242,7 @@ Ronald&nbsp;P de&nbsp;Vries, Robert Riley, Ad&nbsp;Wiebenga, Guillermo Aguilar-O
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Riano-Pachon2017">8</a>]
+[<a name="Riano-Pachon2017">9</a>]
 </td>
 <td class="bibtexitem">
 DM&nbsp;Ria&ntilde;o Pach&oacute;n and L&nbsp;Mattiello.
@@ -240,7 +258,7 @@ DM&nbsp;Ria&ntilde;o Pach&oacute;n and L&nbsp;Mattiello.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Santos2016">9</a>]
+[<a name="Santos2016">10</a>]
 </td>
 <td class="bibtexitem">
 Renato Augusto&nbsp;Correa Santos, Gustavo&nbsp;H. Goldman, and Diego&nbsp;Mauricio Ria&ntilde;o   Pach&oacute;n.
@@ -257,7 +275,7 @@ Renato Augusto&nbsp;Correa Santos, Gustavo&nbsp;H. Goldman, and Diego&nbsp;Mauri
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Brown2016">10</a>]
+[<a name="Brown2016">11</a>]
 </td>
 <td class="bibtexitem">
 Neil&nbsp;Andrew Brown, Laure N&nbsp;A. Ries, Thaila&nbsp;F. Reis, Ranjith Rajendran,
@@ -276,7 +294,7 @@ Neil&nbsp;Andrew Brown, Laure N&nbsp;A. Ries, Thaila&nbsp;F. Reis, Ranjith Rajen
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="deCastro2016">11</a>]
+[<a name="deCastro2016">12</a>]
 </td>
 <td class="bibtexitem">
 Patr&iacute;cia&nbsp;Alves de Castro, Thaila&nbsp;Fernanda Dos Reis, Stephen&nbsp;K.
@@ -297,7 +315,7 @@ Patr&iacute;cia&nbsp;Alves de Castro, Thaila&nbsp;Fernanda Dos Reis, Stephen&nbs
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Winck2016">12</a>]
+[<a name="Winck2016">13</a>]
 </td>
 <td class="bibtexitem">
 Flavia&nbsp;V. Winck, David O&nbsp;P&aacute;ez Melo, Diego&nbsp;M. Ria&ntilde;o-Pach&oacute;n,
@@ -317,7 +335,7 @@ Flavia&nbsp;V. Winck, David O&nbsp;P&aacute;ez Melo, Diego&nbsp;M. Ria&ntilde;o-
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Winck2016a">13</a>]
+[<a name="Winck2016a">14</a>]
 </td>
 <td class="bibtexitem">
 Flavia&nbsp;V Winck, Diego&nbsp;M Riaño-Pachón, and Telma&nbsp;T Franco.
@@ -333,7 +351,7 @@ Flavia&nbsp;V Winck, Diego&nbsp;M Riaño-Pachón, and Telma&nbsp;T Franco.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="DosSantos2015">14</a>]
+[<a name="DosSantos2015">15</a>]
 </td>
 <td class="bibtexitem">
 Renato Augusto&nbsp;Corr&ecirc;a Dos Santos, Andresa&nbsp;Aparecida Berretta, Hernane
@@ -353,7 +371,7 @@ Renato Augusto&nbsp;Corr&ecirc;a Dos Santos, Andresa&nbsp;Aparecida Berretta, He
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Mandelli2015">15</a>]
+[<a name="Mandelli2015">16</a>]
 </td>
 <td class="bibtexitem">
 Fernanda Mandelli, Brenda Oliveira Ramires, Matthew&nbsp;Brian Couger, Douglas
@@ -373,7 +391,7 @@ Fernanda Mandelli, Brenda Oliveira Ramires, Matthew&nbsp;Brian Couger, Douglas
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Marine2015">16</a>]
+[<a name="Marine2015">17</a>]
 </td>
 <td class="bibtexitem">
 Mar&ccedil;al Marin&eacute;, Neil&nbsp;Andrew Brown, Diego&nbsp;Mauricio
@@ -391,7 +409,7 @@ Mar&ccedil;al Marin&eacute;, Neil&nbsp;Andrew Brown, Diego&nbsp;Mauricio
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Mattiello2015">17</a>]
+[<a name="Mattiello2015">18</a>]
 </td>
 <td class="bibtexitem">
 Lucia Mattiello, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Marina Camara&nbsp;Mattos
@@ -411,7 +429,7 @@ Lucia Mattiello, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Marina Camara&n
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Rosas-Morales2015">18</a>]
+[<a name="Rosas-Morales2015">19</a>]
 </td>
 <td class="bibtexitem">
 Juan&nbsp;Pablo Rosas-Morales, Ximena Perez-Mancilla, Liliana L&oacute;pez-Kleine,
@@ -429,7 +447,7 @@ Juan&nbsp;Pablo Rosas-Morales, Ximena Perez-Mancilla, Liliana L&oacute;pez-Klein
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Winck2015">19</a>]
+[<a name="Winck2015">20</a>]
 </td>
 <td class="bibtexitem">
 Flavia&nbsp;V. Winck, Ana&nbsp;Carolina Prado Ribeiro, Rom&ecirc;nia Ramos Domingues,
@@ -449,7 +467,7 @@ Flavia&nbsp;V. Winck, Ana&nbsp;Carolina Prado Ribeiro, Rom&ecirc;nia Ramos Domin
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Buitrago-Florez2014">20</a>]
+[<a name="Buitrago-Florez2014">21</a>]
 </td>
 <td class="bibtexitem">
 Francisco&nbsp;Javier Buitrago-Fl&oacute;rez, Silvia Restrepo, and Diego&nbsp;Mauricio
@@ -467,7 +485,7 @@ Francisco&nbsp;Javier Buitrago-Fl&oacute;rez, Silvia Restrepo, and Diego&nbsp;Ma
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Cristancho2014">21</a>]
+[<a name="Cristancho2014">22</a>]
 </td>
 <td class="bibtexitem">
 Marco&nbsp;A. Cristancho, David&nbsp;Octavio Botero-Rozo, William Giraldo, Javier Tabima,
@@ -487,7 +505,7 @@ Marco&nbsp;A. Cristancho, David&nbsp;Octavio Botero-Rozo, William Giraldo, Javie
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="DosSantos2014">22</a>]
+[<a name="DosSantos2014">23</a>]
 </td>
 <td class="bibtexitem">
 Renato Augusto&nbsp;Corr&ecirc;a Dos Santos, Andresa&nbsp;A. Berretta, Hernane da&nbsp;Silva
@@ -507,7 +525,7 @@ Renato Augusto&nbsp;Corr&ecirc;a Dos Santos, Andresa&nbsp;A. Berretta, Hernane d
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Oliveira2014">23</a>]
+[<a name="Oliveira2014">24</a>]
 </td>
 <td class="bibtexitem">
 Juliana Velasco de&nbsp;Castro Oliveira, Thuanny&nbsp;A. Borges, Renato&nbsp;Augusto
@@ -526,7 +544,7 @@ Juliana Velasco de&nbsp;Castro Oliveira, Thuanny&nbsp;A. Borges, Renato&nbsp;Aug
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Omidbakhshfard2014">24</a>]
+[<a name="Omidbakhshfard2014">25</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Amin Omidbakhshfard, Flavia&nbsp;Vischi Winck, Samuel Arvidsson, Diego&nbsp;M.
@@ -544,7 +562,7 @@ Mohammad&nbsp;Amin Omidbakhshfard, Flavia&nbsp;Vischi Winck, Samuel Arvidsson, D
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Lopez-Kleine2013">25</a>]
+[<a name="Lopez-Kleine2013">26</a>]
 </td>
 <td class="bibtexitem">
 Liliana L&oacute;pez-Kleine, Andr&eacute;s Pinz&oacute;n, Diego Chaves, Silvia
@@ -562,7 +580,7 @@ Liliana L&oacute;pez-Kleine, Andr&eacute;s Pinz&oacute;n, Diego Chaves, Silvia
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Oliveira2013">26</a>]
+[<a name="Oliveira2013">27</a>]
 </td>
 <td class="bibtexitem">
 Juliana Velasco de&nbsp;Castro Oliveira, Renato Augusto&nbsp;Corr&ecirc;a Dos Santos,
@@ -582,7 +600,7 @@ Juliana Velasco de&nbsp;Castro Oliveira, Renato Augusto&nbsp;Corr&ecirc;a Dos Sa
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Read2013">27</a>]
+[<a name="Read2013">28</a>]
 </td>
 <td class="bibtexitem">
 Betsy&nbsp;A. Read, Jessica Kegel, Mary&nbsp;J. Klute, Alan Kuo, Stephane&nbsp;C. Lefebvre,
@@ -608,7 +626,7 @@ Betsy&nbsp;A. Read, Jessica Kegel, Mary&nbsp;J. Klute, Alan Kuo, Stephane&nbsp;C
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Winck2013">28</a>]
+[<a name="Winck2013">29</a>]
 </td>
 <td class="bibtexitem">
 Flavia&nbsp;Vischi Winck, Flavia Vischi Winck, Samuel Arvidsson, Diego&nbsp;Mauricio
@@ -628,7 +646,7 @@ Flavia&nbsp;Vischi Winck, Flavia Vischi Winck, Samuel Arvidsson, Diego&nbsp;Maur
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Dreyer2012">29</a>]
+[<a name="Dreyer2012">30</a>]
 </td>
 <td class="bibtexitem">
 Ingo Dreyer, Judith&nbsp;Lucia Gomez-Porras, Diego&nbsp;Mauricio
@@ -646,7 +664,7 @@ Ingo Dreyer, Judith&nbsp;Lucia Gomez-Porras, Diego&nbsp;Mauricio
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Gomez-Porras2012">30</a>]
+[<a name="Gomez-Porras2012">31</a>]
 </td>
 <td class="bibtexitem">
 Judith&nbsp;Lucia Gomez-Porras, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n,
@@ -665,7 +683,7 @@ Judith&nbsp;Lucia Gomez-Porras, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n,
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Winck2012">31</a>]
+[<a name="Winck2012">32</a>]
 </td>
 <td class="bibtexitem">
 Flavia&nbsp;V. Winck, Diego&nbsp;M. Ria&ntilde;o-Pach&oacute;n, Frederik Sommer, Jens
@@ -682,7 +700,7 @@ Flavia&nbsp;V. Winck, Diego&nbsp;M. Ria&ntilde;o-Pach&oacute;n, Frederik Sommer,
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Banks2011">32</a>]
+[<a name="Banks2011">33</a>]
 </td>
 <td class="bibtexitem">
 Jo&nbsp;Ann Banks, Tomoaki Nishiyama, Mitsuyasu Hasebe, John&nbsp;L. Bowman, Michael
@@ -722,7 +740,7 @@ Jo&nbsp;Ann Banks, Tomoaki Nishiyama, Mitsuyasu Hasebe, John&nbsp;L. Bowman, Mic
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Rohrmann2011">33</a>]
+[<a name="Rohrmann2011">34</a>]
 </td>
 <td class="bibtexitem">
 Johannes Rohrmann, Takayuki Tohge, Rob Alba, Sonia Osorio, Camila Caldana, Ryan
@@ -743,7 +761,7 @@ Johannes Rohrmann, Takayuki Tohge, Rob Alba, Sonia Osorio, Camila Caldana, Ryan
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Lang2010">34</a>]
+[<a name="Lang2010">35</a>]
 </td>
 <td class="bibtexitem">
 Daniel Lang, Benjamin Weiche, Gerrit Timmerhaus, Sandra Richardt, Diego&nbsp;M.
@@ -763,7 +781,7 @@ Daniel Lang, Benjamin Weiche, Gerrit Timmerhaus, Sandra Richardt, Diego&nbsp;M.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Perez-Rodriguez2010">35</a>]
+[<a name="Perez-Rodriguez2010">36</a>]
 </td>
 <td class="bibtexitem">
 Paulino P&eacute;rez-Rodr&iacute;guez, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n,
@@ -782,7 +800,7 @@ Paulino P&eacute;rez-Rodr&iacute;guez, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oac
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Riano-Pachon2010">36</a>]
+[<a name="Riano-Pachon2010">37</a>]
 </td>
 <td class="bibtexitem">
 Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Sabrina Kleessen, Jost Neigenfind,
@@ -801,7 +819,7 @@ Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Sabrina Kleessen, Jost Neigenfin
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Riano-Pachon2009">37</a>]
+[<a name="Riano-Pachon2009">38</a>]
 </td>
 <td class="bibtexitem">
 Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Axel Nagel, Jost Neigenfind, Robert
@@ -820,7 +838,7 @@ Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Axel Nagel, Jost Neigenfind, Rob
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Riano-Pachon2008">38</a>]
+[<a name="Riano-Pachon2008">39</a>]
 </td>
 <td class="bibtexitem">
 Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Luiz Gustavo&nbsp;Guedes Corr&ecirc;a,
@@ -837,7 +855,7 @@ Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Luiz Gustavo&nbsp;Guedes Corr&ec
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Arvidsson2008">39</a>]
+[<a name="Arvidsson2008">40</a>]
 </td>
 <td class="bibtexitem">
 Samuel Arvidsson, Miroslaw Kwasniewski, Diego&nbsp;Mauricio
@@ -855,7 +873,7 @@ Samuel Arvidsson, Miroslaw Kwasniewski, Diego&nbsp;Mauricio
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Balazadeh2008">40</a>]
+[<a name="Balazadeh2008">41</a>]
 </td>
 <td class="bibtexitem">
 S.&nbsp;Balazadeh, D.&nbsp;M. Ria&ntilde;o-Pach&oacute;n, and B.&nbsp;Mueller-Roeber.
@@ -872,7 +890,7 @@ S.&nbsp;Balazadeh, D.&nbsp;M. Ria&ntilde;o-Pach&oacute;n, and B.&nbsp;Mueller-Ro
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Correa2008">41</a>]
+[<a name="Correa2008">42</a>]
 </td>
 <td class="bibtexitem">
 Luiz Gustavo&nbsp;Guedes Corr&ecirc;a, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n,
@@ -891,7 +909,7 @@ Luiz Gustavo&nbsp;Guedes Corr&ecirc;a, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oac
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Gomez-Porras2007">42</a>]
+[<a name="Gomez-Porras2007">43</a>]
 </td>
 <td class="bibtexitem">
 Judith&nbsp;L. G&oacute;mez-Porras, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Ingo
@@ -909,7 +927,7 @@ Judith&nbsp;L. G&oacute;mez-Porras, Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Merchant2007">43</a>]
+[<a name="Merchant2007">44</a>]
 </td>
 <td class="bibtexitem">
 Sabeeha&nbsp;S. Merchant, Simon&nbsp;E. Prochnik, Olivier Vallon, Elizabeth&nbsp;H. Harris,
@@ -953,7 +971,7 @@ Sabeeha&nbsp;S. Merchant, Simon&nbsp;E. Prochnik, Olivier Vallon, Elizabeth&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Riano-Pachon2007">44</a>]
+[<a name="Riano-Pachon2007">45</a>]
 </td>
 <td class="bibtexitem">
 Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Slobodan Ruzicic, Ingo Dreyer, and
@@ -970,7 +988,7 @@ Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Slobodan Ruzicic, Ingo Dreyer, a
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Riano-Pachon2005">45</a>]
+[<a name="Riano-Pachon2005">46</a>]
 </td>
 <td class="bibtexitem">
 Diego&nbsp;Mauricio Ria&ntilde;o-Pach&oacute;n, Ingo Dreyer, and Bernd Mueller-Roeber.
