--- a/members.html
+++ b/members.html
@@ -71,7 +71,7 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
    <li>Dr. rer. nat. Diego Mauricio Riaño-Pachón (Group Leader)</li>
    <ul>
     <li><a href="https://scholar.google.com.br/citations?user=6rghd24AAAAJ&amp;hl=en">Google scholar</a></li>
-    <li><a href="http://www.researcherid.com/rid/A-1755-2010">ResearcherID</a></li>
+    <li><a href="http://www.researcherid.com/rid/B-4891-2014">ResearcherID</a></li>
     <li><a href="https://www.researchgate.net/profile/Diego_Mauricio_Riano-Pachon">Researchgate</a></li>
     <li><a href="http://lattes.cnpq.br/2580825196325707">Lattes</a></li>
     <li><a href="https://independent.academia.edu/DiegoMauricioRianoPachon">Academia</a></li>
