Updating links to access sugarcane genome information

--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,11 @@ During the last couple of years we have been exploring the Illumina's Synthetic 
 </p>
 <ul>
 <li><a href="https://www.researchgate.net/publication/305766209_Surveying_the_complex_polyploid_sugarcane_genome_sequence_using_synthetic_long_reads">Technical memorandum</a></li>
-<li><a href="https://bce.bioetanol.cnpem.br/sugarcanegenome/">Access to genome data</a></li>
+<li>Access to genome data</li>
+ <ul>
+  <li><a href="https://www.ncbi.nlm.nih.gov/assembly/GCA_002018215.1/">Draft genome sequence</a></li>
+  <li><a href="https://figshare.com/projects/Sugarcane_SP80-3280_draft_genome_annotation/22327">Genome annotation</a></li>
+ </ul>
 </ul>
 <h2>Sugarcane gene catalogue</h2>
 <p>One of our first projects, contributing towards a comprehensive Sugarcane gene catalogue, is a study of the leaf development in Sugarcane, genotype SP80-3280. The leaf of C4 plants, such as sugarcane have a developmental gradient along the leaf. We have studied the sugarcane leaf +1 (First leaf from top to bottom with the delawp fully exposed), examining four different segments. More details are available in <a href="http://www.ncbi.nlm.nih.gov/pubmed/26714767">Mattiello et al., 2015</a>, and <a href="sugarcanetranscriptome.html">here</a>.
