--- a/dmrpPublications_bib.html
+++ b/dmrpPublications_bib.html
@@ -1065,7 +1065,8 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
   year = {2017},
   volume = {6},
   number = {861},
-  doi = {10.12688/f1000research.11859.2}
+  doi = {10.12688/f1000research.11859.2},
+  pmid = {28713559}
 }
 </pre>
 
@@ -1129,7 +1130,6 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
   pages = {1758--1769},
   month = dec,
   issn = {0006-3002},
-  __markedentry = {[diriano:]},
   abstract = {Carbohydrate-Active Enzymes are key enzymes for biomass-to-bioproducts conversion. α-l-Arabinofuranosidases that belong to the Glycoside Hydrolase family 62 (GH62) have important applications in biofuel production from plant biomass by hydrolyzing arabinoxylans, found in both the primary and secondary cell walls of plants. In this work, we identified a GH62 α-l-arabinofuranosidase (AnAbf62Awt) that was highly secreted when Aspergillus nidulans was cultivated on sugarcane bagasse. The gene AN7908 was cloned and transformed in A. nidulans for homologous production of AnAbf62Awt, and we confirmed that the enzyme is N-glycosylated at asparagine 83 by mass spectrometry analysis. The enzyme was also expressed in Escherichia coli and the studies of circular dichroism showed that the melting temperature and structural profile of AnAbf62Awt and the non-glycosylated enzyme from E. coli (AnAbf62Adeglyc) were highly similar. In addition, the designed glycomutant AnAbf62AN83Q presented similar patterns of secretion and activity to the AnAbf62Awt, indicating that the N-glycan does not influence the properties of this enzyme. The crystallographic structure of AnAbf62Adeglyc was obtained and the 1.7Å resolution model showed a five-bladed β-propeller fold, which is conserved in family GH62. Mutants AnAbf62AY312F and AnAbf62AY312S showed that Y312 was an important substrate-binding residue. Molecular dynamics simulations indicated that the loop containing Y312 could access different conformations separated by moderately low energy barriers. One of these conformations, comprising a local minimum, is responsible for placing Y312 in the vicinity of the arabinose glycosidic bond, and thus, may be important for catalytic efficiency.},
   country = {Netherlands},
   created = {2017-09-11},
@@ -1149,14 +1149,14 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
 
 <a name="Manfiolli2017"></a><pre>
 @article{<a href="publications.html#Manfiolli2017">Manfiolli2017</a>,
-  author = {Manfiolli, Adriana Oliveira and de Castro, Patrícia Alves and Dos Reis, Thaila Fernanda and Dolan, Stephen and Doyle, Sean and Jones, Gary and Riaño Pachón, Diego M and Ulaş, Mevlüt and Noble, Luke M and Mattern, Derek J and Brakhage, Axel A and Valiante, Vito and Silva-Rocha, Rafael and Bayram, Ozgur and Goldman, Gustavo H},
+  author = {Manfiolli, Adriana Oliveira and de Castro, Patrícia Alves and Dos Reis, Thaila Fernanda and Dolan, Stephen and Doyle, Sean and Jones, Gary and Riaño Pachón, Diego M and Ulaa, Mevl{\"{u}}t and Noble, Luke M and Mattern, Derek J and Brakhage, Axel A and Valiante, Vito and Silva-Rocha, Rafael and Bayram, Ozgur and Goldman, Gustavo H},
   title = {Aspergillus fumigatus protein phosphatase PpzA is involved in iron assimilation, secondary metabolite production, and virulence.},
   journal = {Cellular microbiology},
   year = {2017},
   volume = {19},
   month = dec,
   issn = {1462-5822},
-  __markedentry = {[diriano:6]},
+  __markedentry = {[diriano:]},
   abstract = {Metal restriction imposed by mammalian hosts during an infection is a common mechanism of defence to reduce or avoid the pathogen infection. Metals are essential for organism survival due to its involvement in several biological processes. Aspergillus fumigatus causes invasive aspergillosis, a disease that typically manifests in immunocompromised patients. A. fumigatus PpzA, the catalytic subunit of protein phosphatase Z (PPZ), has been recently identified as associated with iron assimilation. A. fumigatus has 2 high-affinity mechanisms of iron acquisition during infection: reductive iron assimilation and siderophore-mediated iron uptake. It has been shown that siderophore production is important for A. fumigatus virulence, differently to the reductive iron uptake system. Transcriptomic and proteomic comparisons between ∆ppzA and wild-type strains under iron starvation showed that PpzA has a broad influence on genes involved in secondary metabolism. Liquid chromatography-mass spectrometry under standard and iron starvation conditions confirmed that the ΔppzA mutant had reduced production of pyripyropene A, fumagillin, fumiquinazoline A, triacetyl-fusarinine C, and helvolic acid. The ΔppzA was shown to be avirulent in a neutropenic murine model of invasive pulmonary aspergillosis. PpzA plays an important role at the interface between iron starvation, regulation of SM production, and pathogenicity in A. fumigatus.},
   country = {England},
   created = {2017-07-28},
@@ -1169,6 +1169,34 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
   pubmodel = {Print-Electronic},
   pubstatus = {ppublish},
   revised = {2017-11-09}
+}
+</pre>
+
+<a name="Gouvea2018"></a><pre>
+@article{<a href="publications.html#Gouvea2018">Gouvea2018</a>,
+  author = {de Gouvêa, Paula Fagundes and Bernardi, Aline Vianna and Gerolamo, Luis Eduardo and de Souza Santos, Emerson and Riaño-Pachón, Diego Mauricio and Uyemura, Sergio Akira and Dinamarco, Taisa Magnani},
+  title = {Transcriptome and secretome analysis of Aspergillus fumigatus in the presence of sugarcane bagasse.},
+  journal = {BMC genomics},
+  year = {2018},
+  volume = {19},
+  pages = {232},
+  month = apr,
+  issn = {1471-2164},
+  __markedentry = {[diriano:6]},
+  abstract = {Sugarcane bagasse has been proposed as a lignocellulosic residue for second-generation ethanol (2G) produced by breaking down biomass into fermentable sugars. The enzymatic cocktails for biomass degradation are mostly produced by fungi, but low cost and high efficiency can consolidate 2G technologies. A. fumigatus plays an important role in plant biomass degradation capabilities and recycling. To gain more insight into the divergence in gene expression during steam-exploded bagasse (SEB) breakdown, this study profiled the transcriptome of A. fumigatus by RNA sequencing to compare transcriptional profiles of A. fumigatus grown on media containing SEB or fructose as the sole carbon source. Secretome analysis was also performed using SDS-PAGE and LC-MS/MS. The maximum activities of cellulases (0.032 U mL-1), endo-1,4-β--xylanase (10.82 U mL-1) and endo-1,3-β glucanases (0.77 U mL-1) showed that functional CAZymes (carbohydrate-active enzymes) were secreted in the SEB culture conditions. Correlations between transcriptome and secretome data identified several CAZymes in A. fumigatus. Particular attention was given to CAZymes related to lignocellulose degradation and sugar transporters. Genes encoding glycoside hydrolase classes commonly expressed during the breakdown of cellulose, such as GH-5, 6, 7, 43, 45, and hemicellulose, such as GH-2, 10, 11, 30, 43, were found to be highly expressed in SEB conditions. Lytic polysaccharide monooxygenases (LPMO) classified as auxiliary activity families AA9 (GH61), CE (1, 4, 8, 15, 16), PL (1, 3, 4, 20) and GT (1, 2, 4, 8, 20, 35, 48) were also differentially expressed in this condition. Similarly, the most important enzymes related to biomass degradation, including endoxylanases, xyloglucanases, β-xylosidases, LPMOs, α-arabinofuranosidases, cellobiohydrolases, endoglucanases and β-glucosidases, were also identified in the secretome. This is the first report of a transcriptome and secretome experiment of Aspergillus fumigatus in the degradation of pretreated sugarcane bagasse. The results suggest that this strain employs important strategies for this complex degradation process. It was possible to identify a set of genes and proteins that might be applied in several biotechnology fields. This knowledge can be exploited for the improvement of 2G ethanol production by the rational design of enzymatic cocktails.},
+  country = {England},
+  doi = {10.1186/s12864-018-4627-8},
+  issn-linking = {1471-2164},
+  issue = {1},
+  keywords = {Aspergillus fumigatus; CAZymes; Lignocellulose breakdown; RNA-Seq; Secretome; Sugarcane bagasse},
+  nlm-id = {100965258},
+  owner = {NLM},
+  pii = {10.1186/s12864-018-4627-8},
+  pmc = {PMC5883313},
+  pmid = {29614953},
+  pubmodel = {Electronic},
+  pubstatus = {epublish},
+  revised = {2018-04-11}
 }
 </pre>
 
