adding videos to presentations.html

--- a/presentations.html
+++ b/presentations.html
@@ -64,7 +64,8 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
     <div id="wrapper_main_content_area">
      <div class="main_content_area_col_02_04">
 <h1>Videos</h1>
-<script src="http://www.gmodules.com/ig/ifr?url=http://www.google.com/ig/modules/youtube.xml&amp;up_channel=LabBCES&amp;synd=open&amp;w=320&amp;h=390&amp;title=&amp;border=%23ffffff%7C3px%2C1px+solid+%23999999&amp;output=js"></script>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLAZYxLp-zFKCH4gHnhg4TzIYVtolFJy3m" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <h1>Presentations</h1>
 <ul>
 <li><a href="slides/PlantGenomics.pptx">Talk about general aspects of Plant Genomics</a>
