--- a/members.html
+++ b/members.html
@@ -49,6 +49,7 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
       <p> 
        <a href="https://diriano.github.io/">Home</a><br>
        <a href="https://diriano.github.io/projects.html">Projects</a><br>
+       <a href="https://diriano.github.io/presentations.html">Presentations</a><br>
        <a href="https://diriano.github.io/members.html">Members</a><br>
        <a href="https://diriano.github.io/pictures.html">Pictures</a><br>
        <a href="https://diriano.github.io/publications.html">Publications</a><br>
