--- a/members.html
+++ b/members.html
@@ -88,15 +88,14 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
 <div class="member_wrapper">
  <div class="member_content">
   <ul>
-   <li>Lucas Lopes, MSc, PhD student</li>
+   <li>Sandra Milena Gonzalez Sayer, PhD student</li>
    <ul>
-    <li><a href="http://lattes.cnpq.br/8400758942721775">Lattes</a></li>
-    <li><a href="https://www.researchgate.net/profile/Lucas_Lopes6">Researchgate</a></li>
+    <li><a href="http://lattes.cnpq.br/9244978398495621">Lattes</a></li>
    </ul>
   </ul>
  </div>
  <div class="member_picture">
-  <img src="pixs/BCES_Lucas_Lopes.jpg" alt="PhD student, MSc Lucas Lopes" width="200"><br>
+  <img src="pixs/wordle_20092016.png" alt="PhD student, MSc Lucas Lopes" width="200" height="132.997"><br>
  </div>
  <div class="member_cleared"></div>
 </div>
@@ -140,6 +139,10 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
 </ul>
 <h1>Former students</h1>
 <ul>
+<li>Ximena Perez</li>
+<li>Natalia Coutoune</li>
+<li>Lucas Lopes</li>
+<li>Renato Augusto Corrêa dos Santos</li>
 <li>Laura Natalia Gonzalez Garcia</li>
 <li><a href="https://www.researchgate.net/profile/Francisco_Buitrago3">Francisco Buitrago Flores</a></li>
 <li><a href="https://scholar.google.com.br/citations?user=GF77-awAAAAJ&amp;hl=en">Eric Galvez</a></li>
