--- a/members.html
+++ b/members.html
@@ -88,6 +88,20 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
 <div class="member_wrapper">
  <div class="member_content">
   <ul>
+   <li>Emiliana Manesco Romagnoli, Postdoc</li>
+   <ul>
+    <li><a href="http://lattes.cnpq.br/2665533634172966">Lattes</a></li>
+   </ul>
+  </ul>
+ </div>
+ <div class="member_picture">
+  <img src="pixs/wordle_20092016.png" alt="PhD student, MSc Lucas Lopes" width="200" height="132.997"><br>
+ </div>
+ <div class="member_cleared"></div>
+</div>
+<div class="member_wrapper">
+ <div class="member_content">
+  <ul>
    <li>Sandra Milena Gonzalez Sayer, PhD student</li>
    <ul>
     <li><a href="http://lattes.cnpq.br/9244978398495621">Lattes</a></li>
@@ -102,33 +116,59 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
 <div class="member_wrapper">
  <div class="member_content">
   <ul>
-   <li>Renato Augusto Corrêa dos Santos, Master Student</li>
+   <li>Verusca Semmler Rossi, Master Student</li>
    <ul>
-    <li><a href="https://scholar.google.com.br/citations?user=22CKgnIAAAAJ&amp;hl=en">Google scholar</a></li>
-    <li><a href="http://lattes.cnpq.br/3339727232509001">Lattes</a></li>
-    <li><a href="https://www.researchgate.net/profile/Renato_Santos11">Researchgate</a></li>
+    <li><a href="http://lattes.cnpq.br/1385541567808111">Lattes</a></li>
    </ul>
  </ul>
  </div>
  <div class="member_picture">
-  <img src="pixs/BCES_Renato_Augusto_Correa_dos_Santos.jpg" alt="Master student Renato Augusto Correa dos Santos" width="200"><br>
+  <img src="pixs/wordle_20092016.png" alt="PhD student, MSc Lucas Lopes" width="200" height="132.997"><br>
  </div>
  <div class="member_cleared"></div>
 </div>
 <div class="member_wrapper">
  <div class="member_content">
   <ul>
-   <li>Natalia Coutoune, Master Student</li>
+   <li>Felipe Vaz Peres, Undergrad Student</li>
    <ul>
-    <li><a href="http://lattes.cnpq.br/6783829338697052">Lattes</a></li>
+    <li><a href="http://lattes.cnpq.br/7229062652523810">Lattes</a></li>
    </ul>
   </ul>
  </div>
  <div class="member_picture">
-  <img src="pixs/BCES_Natalia_Coutoune.jpg" alt="Master student Natalia Coutoune" width="200"><br>
+  <img src="pixs/wordle_20092016.png" alt="PhD student, MSc Lucas Lopes" width="200" height="132.997"><br>
  </div>
  <div class="member_cleared"></div>
 </div>
+<div class="member_wrapper">
+ <div class="member_content">
+  <ul>
+   <li>Nina Maria Soares Pinheiro Machado, Undergrad Student</li>
+   <ul>
+    <li><a href="http://lattes.cnpq.br/5659509581405167">Lattes</a></li>
+   </ul>
+  </ul>
+ </div>
+ <div class="member_picture">
+  <img src="pixs/wordle_20092016.png" alt="PhD student, MSc Lucas Lopes" width="200" height="132.997"><br>
+ </div>
+ <div class="member_cleared"></div>
+</div>
+<div class="member_wrapper">
+ <div class="member_content">
+  <ul>
+   <li>Danilo Brito Rocha, Undergrad Student</li>
+   <ul>
+    <li><a href="http://lattes.cnpq.br/1923235637571343">Lattes</a></li>
+   </ul>
+  </ul> 
+ </div>
+ <div class="member_picture">
+  <img src="pixs/wordle_20092016.png" alt="PhD student, MSc Lucas Lopes" width="200" height="132.997"><br>
+ </div>
+ <div class="member_cleared"></div>
+</div> 
 <h1>Collaborators</h1>
 <ul>
 <li>Dr. Juliana Velasco (CTBE)</li>
