Adding link to CV in members pages

--- a/members.html
+++ b/members.html
@@ -77,6 +77,7 @@ var a='';var b='hmii3g3o0eiipd./D aD%@%acE022Aq2or2 3%tnorl%DaD%@%a.E 02da%@%02r
     <li><a href="http://lattes.cnpq.br/2580825196325707">Lattes</a></li>
     <li><a href="https://independent.academia.edu/DiegoMauricioRianoPachon">Academia</a></li>
     <li><a href="https://twitter.com/diegoriano">Twitter</a></li>
+    <li><a href="DiegoRiano_cv_short_en2.pdf">CV PDF</a></li>
    </ul>
   </ul>
  </div>
